Fixed about page spacing

--- a/css/about-page.css
+++ b/css/about-page.css
@@ -187,7 +187,7 @@ body {
     background-color: darkorange;
     background-size: cover;
     width: 100vw;
-    padding-bottom: 15%;
+    padding-bottom: 5%;
     padding-top: 50px;
     min-height: inherit;
     color: floralwhite;
@@ -208,7 +208,7 @@ body {
     background-color: floralwhite;
     background-size: cover;
     width: 100vw;
-    padding-bottom: 15%;
+    padding-bottom: 5%;
     padding-top: 50px;
     min-height: inherit;
     color: darkorange;
